--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  font-family: "Roboto", sans-serif;
 }
 
 h1,
@@ -19,8 +21,12 @@ h6 {
 /* / general styles */
 
 header {
-  background-color: aquamarine;
+  background-color: #ff6900;
   height: 60px;
+
+  margin-bottom: 50px;
+
+  color: white;
 }
 
 .wrapper {
@@ -60,36 +66,52 @@ header .wrapper {
 .card__picture-4,
 .card__picture-5,
 .card__picture-6 {
+  height: 90%;
   position: relative;
-
-  background-image: url(images/img/1b.webp);
   background-size: cover;
   background-position: center;
 
   transition: all 0.4s ease-in-out;
-
-  height: 90%;
 }
 
 /* hover */
 
-.card__picture-1:hover {
+.card__picture-1 {
+  background-image: url(images/img/1.webp);
+}
+.card__picture-2 {
+  background-image: url(images/img/2.webp);
+}
+.card__picture-3 {
+  background-image: url(images/img/3.webp);
+}
+.card__picture-4 {
+  background-image: url(images/img/4.webp);
+}
+.card__picture-5 {
+  background-image: url(images/img/5.webp);
+}
+.card__picture-6 {
   background-image: url(images/img/6.webp);
+}
+
+.card__picture-1:hover {
+  background-image: url(images/img/1b.webp);
 }
 .card__picture-2:hover {
-  background-image: url(images/img/6.webp);
+  background-image: url(images/img/2b.webp);
 }
 .card__picture-3:hover {
-  background-image: url(images/img/6.webp);
+  background-image: url(images/img/3b.webp);
 }
 .card__picture-4:hover {
-  background-image: url(images/img/6.webp);
+  background-image: url(images/img/4b.webp);
 }
 .card__picture-5:hover {
-  background-image: url(images/img/6.webp);
+  background-image: url(images/img/5b.webp);
 }
 .card__picture-6:hover {
-  background-image: url(images/img/6.webp);
+  background-image: url(images/img/6b.webp);
 }
 
 /* hover */
@@ -102,10 +124,10 @@ header .wrapper {
 .like {
   width: 35px;
   height: 35px;
-  background-color: brown;
+  background-color: rgb(255, 255, 255);
 
   position: absolute;
-  top: 0;
+  top: 10px;
   right: 0;
 
   display: flex;
@@ -113,8 +135,12 @@ header .wrapper {
   align-items: center;
 }
 
+.like:hover .fa-solid {
+  color: #ff0000;
+}
+
 .logo {
-  height: 60px;
+  height: 70px;
   width: 400px;
 
   background-image: url(./images/img/boolean-logo.png);
@@ -129,23 +155,43 @@ header .wrapper {
 
 .badge {
   position: absolute;
-  bottom: 0;
+  bottom: 30px;
   left: 0;
 
-  background-color: brown;
+  color: white;
 }
 
 .badge * {
   font-size: 0.8rem;
   display: inline-block;
+
+  padding: 5px 10px;
+  margin-right: 3px;
+
+  background-color: #ff0000;
+}
+
+.b-green {
+  background-color: green;
 }
 
 .price h5 {
   display: inline-block;
 }
 
+footer {
+  background-color: #1a1a1a;
+  color: white;
+
+  height: 90px;
+}
+
 footer .wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+footer h4 {
+  display: inline-block;
 }
