--- a/style.css
+++ b/style.css
@@ -23,13 +23,16 @@ h6 {
 header {
   background-color: #ff6900;
   height: 60px;
-
-  margin-bottom: 50px;
+  width: 100%;
 
   color: white;
 
   -webkit-box-shadow: 0px 8px 5px -3px rgba(0, 0, 0, 0.5);
   box-shadow: 0px 8px 5px -3px rgba(0, 0, 0, 0.5);
+
+  position: fixed;
+  top: 0;
+  z-index: 100;
 }
 
 nav a {
@@ -55,6 +58,8 @@ header .wrapper {
 .card-container {
   display: flex;
   flex-direction: column;
+
+  margin-top: 100px;
 }
 
 .card-row {
@@ -81,8 +86,6 @@ header .wrapper {
   position: relative;
   background-size: cover;
   background-position: center;
-
-  transition: all 0.4s ease-in-out;
 }
 
 /* card - hover */
@@ -229,7 +232,7 @@ footer .wrapper {
 
 footer h4 {
   display: inline-block;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   font-weight: 400;
 }
 
@@ -237,5 +240,5 @@ footer h3 {
   font-size: 1rem;
   font-size: 1rem;
 
-  margin-bottom: 10px;
+  margin-right: 5px;
 }
